--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
     ></script>
     <link rel="stylesheet" href="/css/main.css" />
     <script src="#" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.cdnfonts.com/css/futura-pt" rel="stylesheet" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li>Logo</li>
-        <li><a href="">knap</a></li>
-        <li><a href="">knap</a></li>
-        <li><a href="">knap</a></li>
-        <li><a href="">knap</a></li>
-        <li><a href="">knap</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <ul>
+          <li>CodeWave</li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Team</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Sign in</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
