--- a/team.html
+++ b/team.html
@@ -13,6 +13,16 @@
   </head>
   <body>
     <header class="team-header">
+      <nav>
+        <ul>
+          <li>CodeWave</li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Team</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Sign in</a></li>
+        </ul>
+      </nav>
       <div class="team-description">
         <div class="team-navn">
           <h1 class="">Pelle Henriksen</h1>
