--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="">Sign in</a></li>
         </ul>
       </nav>
+      <h1>Code <br />Wave</h1>
     </header>
   </body>
 </html>
