--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kopke</title>
+    <title>CodeWave</title>
     <script
       src="https://kit.fontawesome.com/472910ecc6.js"
       crossorigin="anonymous"
@@ -25,7 +25,28 @@
           <li><a href="">Sign in</a></li>
         </ul>
       </nav>
-      <h1>Code <br />Wave</h1>
+      <div class="header-content">
+        <div class="header-left">
+          <h1>Code<br />Wave</h1>
+          <p>
+            Velkommen til Codewave - hvor bølgen af kreativitet og teknologi
+            mødes! Vi er et dynamisk team af to unge drenge, der brænder for at
+            skabe imponerende hjemmesider med både front-end og back-end
+            programmering. Vores værktøjer inkluderer HTML, CSS og JavaScript,
+            som vi mestrer for at levere enestående onlineoplevelser til vores
+            kunder.
+          </p>
+          <a class="boxbutton" href="index.html">Contact</a>
+        </div>
+        <div class="header-right">
+          <div class="top-pic">
+            <img src="/assets/man.png" alt="man1" />
+            <div class="bottompic">
+              <img src="/assets/man2.jpg" alt="man1" />
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
